Put docker puppet config in puppet_config dict
This approach removes the need for the yaql zip to build the
docker-puppet data by building the data in a puppet_config dict.

This allows a future change to make docker-puppet.py only accept dict
data.

Currently the step_config is left where it is and referenced inside
puppet_config, but feedback is welcome whether this is necessary or
desirable.

Change-Id: I4a4d7a6fd2735cb841174af305dbb62e0b3d3e8c

--- a/docker/post.j2.yaml
+++ b/docker/post.j2.yaml
@@ -130,16 +130,7 @@ resources:
       group: json-file
       config:
         /var/lib/docker-puppet/docker-puppet.json:
-          yaql:
-            # select only services that have a non-null config_image with
-            # a step_config as well
-            expression:
-              $.data.config_volume.zip($.data.puppet_tags, $.data.step_config, $.data.config_image).where($[3] != null and $[1] != null)
-            data:
-              config_volume: {get_param: [role_data, {{role.name}}, config_volume]}
-              step_config: {get_param: [role_data, {{role.name}}, step_config]}
-              puppet_tags: {get_param: [role_data, {{role.name}}, puppet_tags]}
-              config_image: {get_param: [role_data, {{role.name}}, config_image]}
+          {get_param: [role_data, {{role.name}}, puppet_config]}
 
   {{role.name}}GenPuppetDeployment:
     type: OS::Heat::SoftwareDeploymentGroup
