--- a/docker/services/database/mysql.yaml
+++ b/docker/services/database/mysql.yaml
@@ -54,7 +54,7 @@ outputs:
                 pid-file: /var/lib/mysql/mariadb.pid
               mysqld_safe:
                 pid-file: /var/lib/mysql/mariadb.pid
-      step_config:
+      step_config: &step_config
         list_join:
           - "\n"
           - - "['Mysql_datadir', 'Mysql_user', 'Mysql_database', 'Mysql_grant', 'Mysql_plugin'].each |String $val| { noop_resource($val) }"
@@ -65,9 +65,11 @@ outputs:
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerMysqlImage} ]
-      puppet_tags: file # set this even though file is the default
-      config_volume: mysql
-      config_image: *mysql_image
+      puppet_config:
+        config_volume: mysql
+        puppet_tags: file # set this even though file is the default
+        step_config: *step_config
+        config_image: *mysql_image
       kolla_config:
         /var/lib/kolla/config_files/mysql.json:
           command: /usr/bin/mysqld_safe
