--- a/docker/services/ironic-api.yaml
+++ b/docker/services/ironic-api.yaml
@@ -48,19 +48,22 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [IronicApiBase, role_data, config_settings]
-      step_config: {get_attr: [IronicApiBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [IronicApiBase, role_data, step_config]
       service_config_settings: {get_attr: [IronicApiBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &ironic_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerIronicApiImage} ]
-      puppet_tags: ironic_config
-      config_volume: ironic
-      config_image:
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerIronicConfigImage} ]
+      puppet_config:
+        config_volume: ironic
+        puppet_tags: ironic_config
+        step_config: *step_config
+        config_image:
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerIronicConfigImage} ]
       kolla_config:
          /var/lib/kolla/config_files/ironic_api.json:
            command: /usr/bin/ironic-api
