--- a/docker/services/memcached.yaml
+++ b/docker/services/memcached.yaml
@@ -42,16 +42,19 @@ outputs:
     value:
       service_name: {get_attr: [MemcachedBase, role_data, service_name]}
       config_settings: {get_attr: [MemcachedBase, role_data, config_settings]}
-      step_config: {get_attr: [MemcachedBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [MemcachedBase, role_data, step_config]
       service_config_settings: {get_attr: [MemcachedBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &memcached_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerMemcachedImage} ]
-      puppet_tags: 'file'
-      config_volume: 'memcached'
-      config_image: *memcached_image
+      puppet_config:
+        config_volume: 'memcached'
+        puppet_tags: 'file'
+        step_config: *step_config
+        config_image: *memcached_image
       kolla_config: {}
       docker_config:
         step_1:
