--- a/docker/services/neutron-plugin-ml2.yaml
+++ b/docker/services/neutron-plugin-ml2.yaml
@@ -44,15 +44,18 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
-      step_config: {get_attr: [NeutronBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [NeutronBase, role_data, step_config]
       service_config_settings: {get_attr: [NeutronBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &docker_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerNeutronConfigImage} ]
-      puppet_tags: ''
-      config_volume: 'neutron'
-      config_image: *docker_image
+      puppet_config:
+        config_volume: 'neutron'
+        puppet_tags: ''
+        step_config: *step_config
+        config_image: *docker_image
       kolla_config: {}
       docker_config: {}
