--- a/docker/services/nova-api.yaml
+++ b/docker/services/nova-api.yaml
@@ -49,19 +49,22 @@ outputs:
         map_merge:
           - get_attr: [NovaApiBase, role_data, config_settings]
           - apache::default_vhost: false
-      step_config: {get_attr: [NovaApiBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [NovaApiBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaApiBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &nova_api_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerNovaApiImage} ]
-      puppet_tags: nova_config
-      config_volume: nova
-      config_image:
-        list_join:
-        - '/'
-        - [ {get_param: DockerNamespace}, {get_param: DockerNovaBaseImage} ]
+      puppet_config:
+        config_volume: nova
+        puppet_tags: nova_config
+        step_config: *step_config
+        config_image:
+          list_join:
+          - '/'
+          - [ {get_param: DockerNamespace}, {get_param: DockerNovaBaseImage} ]
       kolla_config:
          /var/lib/kolla/config_files/nova_api.json:
            command: /usr/bin/nova-api
