--- a/docker/services/nova-ironic.yaml
+++ b/docker/services/nova-ironic.yaml
@@ -45,17 +45,20 @@ outputs:
     value:
       service_name: {get_attr: [NovaIronicBase, role_data, service_name]}
       config_settings: {get_attr: [NovaIronicBase, role_data, config_settings]}
-      step_config: {get_attr: [NovaIronicBase, role_data, step_config]}
-      puppet_tags: nova_config,nova_paste_api_ini
+      step_config: &step_config
+        get_attr: [NovaIronicBase, role_data, step_config]
       docker_image: &nova_ironic_image
         list_join:
         - '/'
         - [ {get_param: DockerNamespace}, {get_param: DockerNovaComputeImage} ]
-      config_volume: nova
-      config_image:
-        list_join:
-        - '/'
-        - [ {get_param: DockerNamespace}, {get_param: DockerNovaBaseImage} ]
+      puppet_config:
+        config_volume: nova
+        puppet_tags: nova_config,nova_paste_api_ini
+        step_config: *step_config
+        config_image:
+          list_join:
+          - '/'
+          - [ {get_param: DockerNamespace}, {get_param: DockerNovaBaseImage} ]
       kolla_config:
         /var/lib/kolla/config_files/nova_ironic.json:
            command: /usr/bin/nova-compute --config-file /etc/nova/nova.conf --config-file /etc/nova/rootwrap.conf
