--- a/docker/services/nova-metadata.yaml
+++ b/docker/services/nova-metadata.yaml
@@ -37,12 +37,15 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [NovaMetadataBase, role_data, config_settings]
-      step_config: {get_attr: [NovaMetadataBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [NovaMetadataBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaMetadataBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: ''
-      puppet_tags: ''
-      config_volume: ''
-      config_image: ''
+      puppet_config:
+        config_volume: ''
+        puppet_tags: ''
+        step_config: *step_config
+        config_image: ''
       kolla_config: {}
       docker_config: {}
