--- a/docker/services/nova-placement.yaml
+++ b/docker/services/nova-placement.yaml
@@ -45,19 +45,22 @@ outputs:
         map_merge:
           - get_attr: [NovaPlacementBase, role_data, config_settings]
           - apache::default_vhost: false
-      step_config: {get_attr: [NovaPlacementBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [NovaPlacementBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaPlacementBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &nova_placement_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerNovaPlacementImage} ]
-      puppet_tags: nova_config
-      config_volume: nova_placement
-      config_image:
-        list_join:
-        - '/'
-        - [ {get_param: DockerNamespace}, {get_param: DockerNovaPlacementImage} ]
+      puppet_config:
+        config_volume: nova_placement
+        puppet_tags: nova_config
+        step_config: *step_config
+        config_image:
+          list_join:
+          - '/'
+          - [ {get_param: DockerNamespace}, {get_param: DockerNovaPlacementImage} ]
       kolla_config:
          /var/lib/kolla/config_files/nova_placement.json:
            command: /usr/sbin/httpd -DFOREGROUND
