--- a/docker/services/services.yaml
+++ b/docker/services/services.yaml
@@ -68,9 +68,7 @@ outputs:
       step_config:
         {get_attr: [ServiceChain, role_data, step_config]}
       docker_image: {get_attr: [ServiceChain, role_data, docker_image]}
-      puppet_tags: {get_attr: [ServiceChain, role_data, puppet_tags]}
-      config_volume: {get_attr: [ServiceChain, role_data, config_volume]}
-      config_image: {get_attr: [ServiceChain, role_data, config_image]}
+      puppet_config: {get_attr: [ServiceChain, role_data, puppet_config]}
       kolla_config:
         map_merge: {get_attr: [ServiceChain, role_data, kolla_config]}
       docker_config:
