--- a/docker/services/swift-ringbuilder.yaml
+++ b/docker/services/swift-ringbuilder.yaml
@@ -66,15 +66,18 @@ outputs:
     value:
       service_name: {get_attr: [SwiftRingbuilderBase, role_data, service_name]}
       config_settings: {get_attr: [SwiftRingbuilderBase, role_data, config_settings]}
-      step_config: {get_attr: [SwiftRingbuilderBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [SwiftRingbuilderBase, role_data, step_config]
       service_config_settings: {get_attr: [SwiftRingbuilderBase, role_data, service_config_settings]}
-      puppet_tags: exec,ring_object_device,swift::ringbuilder::create,tripleo::profile::base::swift::add_devices,swift::ringbuilder::rebalance
       # BEGIN DOCKER SETTINGS
       docker_image: &docker_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerSwiftProxyImage} ]
-      config_volume: 'swift'
-      config_image: *docker_image
+      puppet_config:
+        config_volume: 'swift'
+        puppet_tags: exec,ring_object_device,swift::ringbuilder::create,tripleo::profile::base::swift::add_devices,swift::ringbuilder::rebalance
+        step_config: *step_config
+        config_image: *docker_image
       kolla_config: {}
       docker_config: {}
