--- a/docker/services/swift-storage.yaml
+++ b/docker/services/swift-storage.yaml
@@ -54,16 +54,19 @@ outputs:
     value:
       service_name: {get_attr: [SwiftStorageBase, role_data, service_name]}
       config_settings: {get_attr: [SwiftStorageBase, role_data, config_settings]}
-      step_config: {get_attr: [SwiftStorageBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [SwiftStorageBase, role_data, step_config]
       service_config_settings: {get_attr: [SwiftStorageBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &swift_proxy_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerSwiftProxyImage} ]
-      puppet_tags: swift_config,swift_container_config,swift_container_sync_realms_config,swift_account_config,swift_object_config,swift_object_expirer_config
-      config_volume: swift
-      config_image: *swift_proxy_image
+      puppet_config:
+        config_volume: swift
+        puppet_tags: swift_config,swift_container_config,swift_container_sync_realms_config,swift_account_config,swift_object_config,swift_object_expirer_config
+        step_config: *step_config
+        config_image: *swift_proxy_image
       kolla_config:
         /var/lib/kolla/config_files/swift_account_auditor.json:
           command: /usr/bin/swift-account-auditor /etc/swift/account-server.conf
