--- a/docker/services/database/mongodb.yaml
+++ b/docker/services/database/mongodb.yaml
@@ -45,7 +45,7 @@ outputs:
         map_merge:
           - get_attr: [MongodbPuppetBase, role_data, config_settings]
           - mongodb::server::fork: false
-      step_config:
+      step_config: &step_config
         list_join:
           - "\n"
           - - "['Mongodb_database', 'Mongodb_user', 'Mongodb_replset'].each |String $val| { noop_resource($val) }"
@@ -56,9 +56,11 @@ outputs:
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerMongodbImage} ]
-      puppet_tags: file # set this even though file is the default
-      config_volume: mongodb
-      config_image: *mongodb_image
+      puppet_config:
+        config_volume: mongodb
+        puppet_tags: file # set this even though file is the default
+        step_config: *step_config
+        config_image: *mongodb_image
       kolla_config:
         /var/lib/kolla/config_files/mongodb.json:
           command: /usr/bin/mongod --unixSocketPrefix=/var/run/mongodb --config /etc/mongod.conf run
