--- a/docker/services/glance-api.yaml
+++ b/docker/services/glance-api.yaml
@@ -45,16 +45,19 @@ outputs:
         map_merge:
           - get_attr: [GlanceApiPuppetBase, role_data, config_settings]
           - glance::api::sync_db: false
-      step_config: {get_attr: [GlanceApiPuppetBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [GlanceApiPuppetBase, role_data, step_config]
       service_config_settings: {get_attr: [GlanceApiPuppetBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS #
       docker_image: &glance_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerGlanceApiImage} ]
-      puppet_tags: glance_api_config,glance_api_paste_ini,glance_swift_config,glance_cache_config
-      config_volume: glance_api
-      config_image: *glance_image
+      puppet_config:
+        config_volume: glance_api
+        puppet_tags: glance_api_config,glance_api_paste_ini,glance_swift_config,glance_cache_config
+        step_config: *step_config
+        config_image: *glance_image
       kolla_config:
          /var/lib/kolla/config_files/glance-api.json:
            command: /usr/bin/glance-api --config-file /usr/share/glance/glance-api-dist.conf --config-file /etc/glance/glance-api.conf
