--- a/docker/services/heat-api.yaml
+++ b/docker/services/heat-api.yaml
@@ -51,19 +51,22 @@ outputs:
         map_merge:
           - get_attr: [HeatBase, role_data, config_settings]
           - apache::default_vhost: false
-      step_config: {get_attr: [HeatBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [HeatBase, role_data, step_config]
       service_config_settings: {get_attr: [HeatBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &heat_api_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerHeatApiImage} ]
-      puppet_tags: heat_config,file,concat,file_line
-      config_volume: heat
-      config_image:
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerHeatEngineImage} ]
+      puppet_config:
+        config_volume: heat
+        puppet_tags: heat_config,file,concat,file_line
+        step_config: *step_config
+        config_image:
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerHeatEngineImage} ]
       kolla_config:
          /var/lib/kolla/config_files/heat_api.json:
            command: /usr/bin/heat-api --config-file /usr/share/heat/heat-dist.conf --config-file /etc/heat/heat.conf
