--- a/docker/services/ironic-pxe.yaml
+++ b/docker/services/ironic-pxe.yaml
@@ -37,19 +37,21 @@ outputs:
     value:
       service_name: ironic_pxe
       config_settings: {}
-      step_config: ''
+      step_config: &step_config ''
       service_config_settings: {}
       # BEGIN DOCKER SETTINGS
       docker_image: &ironic_pxe_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerIronicPxeImage} ]
-      puppet_tags: ironic_config
-      config_volume: ironic
-      config_image:
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerIronicConfigImage} ]
+      puppet_config:
+        config_volume: ironic
+        puppet_tags: ironic_config
+        step_config: *step_config
+        config_image:
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerIronicConfigImage} ]
       kolla_config:
          /var/lib/kolla/config_files/ironic_pxe_http.json:
            command: /usr/sbin/httpd -DFOREGROUND
