--- a/docker/services/mistral-engine.yaml
+++ b/docker/services/mistral-engine.yaml
@@ -49,19 +49,22 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [MistralBase, role_data, config_settings]
-      step_config: {get_attr: [MistralBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [MistralBase, role_data, step_config]
       service_config_settings: {get_attr: [MistralBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &mistral_engine_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerMistralEngineImage} ]
-      puppet_tags: mistral_config
-      config_volume: mistral
-      config_image:
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerMistralConfigImage} ]
+      puppet_config:
+        config_volume: mistral
+        puppet_tags: mistral_config
+        step_config: *step_config
+        config_image:
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerMistralConfigImage} ]
       kolla_config:
          /var/lib/kolla/config_files/mistral_engine.json:
            command: /usr/bin/mistral-server --config-file=/etc/mistral/mistral.conf --log-file=/var/log/mistral/engine.log --server=engine
