--- a/docker/services/nova-conductor.yaml
+++ b/docker/services/nova-conductor.yaml
@@ -47,19 +47,22 @@ outputs:
     value:
       service_name: {get_attr: [NovaConductorBase, role_data, service_name]}
       config_settings: {get_attr: [NovaConductorBase, role_data, config_settings]}
-      step_config: {get_attr: [NovaConductorBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [NovaConductorBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaConductorBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &nova_conductor_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerNovaConductorImage} ]
-      puppet_tags: nova_config
-      config_volume: nova
-      config_image:
-        list_join:
-        - '/'
-        - [ {get_param: DockerNamespace}, {get_param: DockerNovaBaseImage} ]
+      puppet_config:
+        config_volume: nova
+        puppet_tags: nova_config
+        step_config: *step_config
+        config_image:
+          list_join:
+          - '/'
+          - [ {get_param: DockerNamespace}, {get_param: DockerNovaBaseImage} ]
       kolla_config:
          /var/lib/kolla/config_files/nova_conductor.json:
            command: /usr/bin/nova-conductor
