--- a/docker/services/nova-scheduler.yaml
+++ b/docker/services/nova-scheduler.yaml
@@ -46,15 +46,18 @@ outputs:
     value:
       service_name: {get_attr: [NovaSchedulerBase, role_data, service_name]}
       config_settings: {get_attr: [NovaSchedulerBase, role_data, config_settings]}
-      step_config: {get_attr: [NovaSchedulerBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [NovaSchedulerBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaSchedulerBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &nova_scheduler_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerNovaSchedulerImage} ]
-      puppet_tags: nova_config
+      puppet_config:
       config_volume: nova
+      puppet_tags: nova_config
+      step_config: *step_config
       config_image:
         list_join:
         - '/'
