--- a/docker/services/rabbitmq.yaml
+++ b/docker/services/rabbitmq.yaml
@@ -46,16 +46,19 @@ outputs:
     value:
       service_name: {get_attr: [RabbitmqBase, role_data, service_name]}
       config_settings: {get_attr: [RabbitmqBase, role_data, config_settings]}
-      step_config: {get_attr: [RabbitmqBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [RabbitmqBase, role_data, step_config]
       service_config_settings: {get_attr: [RabbitmqBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &rabbitmq_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerRabbitmqImage} ]
-      puppet_tags: file
-      config_volume: rabbitmq
-      config_image: *rabbitmq_image
+      puppet_config:
+        config_volume: rabbitmq
+        puppet_tags: file
+        step_config: *step_config
+        config_image: *rabbitmq_image
       kolla_config:
         /var/lib/kolla/config_files/rabbitmq.json:
           command: /usr/lib/rabbitmq/bin/rabbitmq-server
