--- a/docker/services/swift-proxy.yaml
+++ b/docker/services/swift-proxy.yaml
@@ -42,16 +42,19 @@ outputs:
     value:
       service_name: {get_attr: [SwiftProxyBase, role_data, service_name]}
       config_settings: {get_attr: [SwiftProxyBase, role_data, config_settings]}
-      step_config: {get_attr: [SwiftProxyBase, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [SwiftProxyBase, role_data, step_config]
       service_config_settings: {get_attr: [SwiftProxyBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
       docker_image: &swift_proxy_image
         list_join:
           - '/'
           - [ {get_param: DockerNamespace}, {get_param: DockerSwiftProxyImage} ]
-      puppet_tags: swift_proxy_config
-      config_volume: swift
-      config_image: *swift_proxy_image
+      puppet_config:
+        config_volume: swift
+        puppet_tags: swift_proxy_config
+        step_config: *step_config
+        config_image: *swift_proxy_image
       kolla_config:
         /var/lib/kolla/config_files/swift_proxy.json:
           command: /usr/bin/swift-proxy-server /etc/swift/proxy-server.conf
