--- a/puppet/compute-role.yaml
+++ b/puppet/compute-role.yaml
@@ -483,6 +483,7 @@ resources:
 
   UpdateDeployment:
     type: OS::Heat::SoftwareDeployment
+    depends_on: NetworkDeployment
     properties:
       name: UpdateDeployment
       config: {get_resource: UpdateConfig}
